[tool.poetry]
name = "chrome-cookies"
version = "0.1.0"
description = "get chrome cookies"
authors = ["Pradyumna Chatterjee <chatterjee.pra@gmail.com>"]
readme = "README.md"
packages = [{include = "chrome_cookies"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
pycookiecheat = "^0.4.7"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
